Fixed wrong js links

--- a/website/index.html
+++ b/website/index.html
@@ -322,7 +322,7 @@
 
     </div>
 
-	<script src="js/jquery-1.10.1.min"></script>
-	<script src="js/bootstrap.min"></script>
+	<script src="js/jquery-1.10.1.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
